Project

General

Profile

Actions

Bug #35973

closed

radosgw-admin bucket limit check stuck generating high read ops with > 999 buckets per user

Added by Oleg Morozov over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
% Done:

0%

Source:
Tags:
Backport:
mimic luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Created over 1k buckets for user and radosgw-admin bucket limit check stuck generating 4-5k read ops in our case. Looks like infinite loop or something similiar.

It happens only with 1000 buckets per user and up. 999 works OK.

Tested on 4 clusters (luminous and mimic) - same result.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #38726: mimic: radosgw-admin bucket limit check stuck generating high read ops with > 999 buckets per userResolvedAshish SinghActions
Copied to rgw - Backport #38727: luminous: radosgw-admin bucket limit check stuck generating high read ops with > 999 buckets per userResolvedAshish SinghActions
Actions #1

Updated by Casey Bodley over 5 years ago

  • Status changed from New to 12
  • Backport set to mimic luminous
Actions #2

Updated by Abhishek Lekshmanan over 5 years ago

  • Assignee set to Abhishek Lekshmanan
Actions #3

Updated by Matt Benjamin about 5 years ago

  • Status changed from 12 to Fix Under Review
  • Assignee changed from Abhishek Lekshmanan to Matt Benjamin
Actions #4

Updated by Casey Bodley about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38726: mimic: radosgw-admin bucket limit check stuck generating high read ops with > 999 buckets per user added
Actions #6

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38727: luminous: radosgw-admin bucket limit check stuck generating high read ops with > 999 buckets per user added
Actions #7

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF